# execution-kernel

./: .gitignore  .gitmodules  Cargo.toml  README.md  SPECIFICATION.md
.github/workflows/: ci.yml
contracts/: README.md  remappings.txt
contracts/script/: TestVerifyAndParse.s.sol
contracts/src/: KernelExecutionVerifier.sol  KernelOutputParser.sol  KernelVault.sol  MockYieldSource.sol
contracts/src/interfaces/: IKernelExecutionVerifier.sol
contracts/test/: KernelExecutionVerifier.t.sol  KernelOutputParser.Conformance.t.sol  KernelVault.ExecutionSemantics.t.sol  KernelVault.t.sol
contracts/test/mocks/: MockERC20.sol  MockKernelExecutionVerifier.sol  MockVerifier.sol
crates/agent-pack/: Cargo.toml
crates/agent-pack/src/: hash.rs  image_id.rs  lib.rs  manifest.rs  onchain.rs  scaffold.rs  verify.rs
crates/agent-pack/tests/: manifest_tests.rs  onchain_tests.rs
crates/agent-traits/: Cargo.toml
crates/agent-traits/src/: lib.rs
crates/agents/examples/example-yield-agent/: build.rs
crates/agents/examples/example-yield-agent/src/: lib.rs
crates/agents/wrappers/kernel-guest-binding-yield/src/: lib.rs
crates/constraints/src/: lib.rs
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/src/: lib.rs  phase3_yield.rs
crates/example-agent/: Cargo.toml  build.rs
crates/example-agent/src/: lib.rs
crates/example-yield-agent/: Cargo.toml
crates/host-tests/: Cargo.toml
crates/host-tests/src/: lib.rs
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: codec.rs  hash.rs  lib.rs  types.rs
crates/kernel-guest/: Cargo.toml
crates/kernel-guest/src/: lib.rs  main.rs
crates/kernel-sdk/: Cargo.toml
crates/kernel-sdk/examples/: echo_agent.rs
crates/kernel-sdk/src/: agent.rs  lib.rs  math.rs  types.rs
crates/methods/: Cargo.toml  build.rs
crates/methods/src/: lib.rs
crates/methods/zkvm-guest/: Cargo.toml
crates/methods/zkvm-guest/src/: main.rs
crates/protocol/constraints/: Cargo.toml
crates/protocol/constraints/src/: lib.rs
crates/protocol/kernel-core/src/: codec.rs  hash.rs  lib.rs  types.rs
crates/protocol/kernel-core/tests/: conformance_tests.rs
crates/runtime/kernel-guest/src/: lib.rs
crates/sdk/kernel-sdk/: Cargo.toml
crates/sdk/kernel-sdk/examples/: echo_agent.rs
crates/sdk/kernel-sdk/src/: agent.rs  bytes.rs  lib.rs  types.rs
crates/testing/e2e-tests/src/: lib.rs  phase3_yield.rs
crates/testing/kernel-host-tests/src/: lib.rs
docs/: P0.1_DOCUMENTATION.md  P0.2_DOCUMENTATION.md  P0.3_DOCUMENTATION.md  P0.4_DOCUMENTATION.md  P0_DOCUMENTATION.md  agent-pack.md
kernel/: Cargo.toml  README.md
kernel/examples/: basic_usage.rs
kernel/src/: agent.rs  constraints.rs  error.rs  executor.rs  lib.rs  market.rs  vault.rs
spec/: codec.md  constraints.md
