[workspace]
resolver = "2"
members = [
    "crates/kernel-core",
    "crates/kernel-guest",
    "crates/constraints",
    "crates/kernel-sdk",
    "crates/example-agent",
    "crates/host-tests",
]

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false, features = [] }

[profile.release]
debug = 1
lto = true

[profile.dev]
opt-level = 1