[package]
name = "execution-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
risc0-zkvm = { version = "1.1" }

[lib]
name = "execution_kernel"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"