[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
description = "End-to-end zkVM proof tests for the execution kernel"
license = "Apache-2.0"
publish = false

# This crate contains only tests, no library
[lib]
path = "src/lib.rs"

[dependencies]
# Kernel crates for types and encoding
kernel-core = { path = "../kernel-core" }
kernel-sdk = { path = "../kernel-sdk" }
constraints = { path = "../constraints" }

# Agent code hash for input construction
example-agent = { path = "../example-agent" }
example-yield-agent = { path = "../example-yield-agent", optional = true }

# Methods crate provides the guest ELF and IMAGE_ID
methods = { path = "../methods", optional = true }

# RISC Zero prover and verifier (host-side)
risc0-zkvm = { version = "3.0", default-features = false, optional = true }

# On-chain interaction dependencies (for phase3-e2e)
alloy = { version = "0.8", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
# Same dependencies for tests
kernel-core = { path = "../kernel-core" }
kernel-sdk = { path = "../kernel-sdk" }
constraints = { path = "../constraints" }
example-agent = { path = "../example-agent" }

[dependencies.hex]
version = "0.4"

[features]
default = []
# Enable this feature to run zkVM proof tests
# Requires RISC Zero toolchain installed
risc0-e2e = ["dep:methods", "dep:risc0-zkvm", "risc0-zkvm/prove"]

# Enable this feature to run Phase 3 E2E yield tests
# Requires RISC Zero toolchain + deployed contracts
phase3-e2e = [
    "dep:example-yield-agent",
    "dep:alloy",
    "dep:tokio",
    "dep:dotenvy",
    "risc0-e2e",
]
