[package]
name = "example-agent"
version = "0.1.0"
edition = "2021"
description = "Example agent implementation for testing the canonical agent_main entrypoint"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
kernel-sdk = { path = "../kernel-sdk" }

[build-dependencies]
sha2 = "0.10"
