[package]
name = "host-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel-core = { path = "../kernel-core" }
kernel-guest = { path = "../kernel-guest" }
agent-traits = { path = "../agent-traits" }
constraints = { path = "../constraints" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"