[package]
name = "host-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel-core = { path = "../kernel-core", features = ["std"] }
kernel-guest = { path = "../kernel-guest" }
kernel-sdk = { path = "../kernel-sdk" }
constraints = { path = "../constraints" }
# example-agent provides the agent_main symbol required by kernel-guest
example-agent = { path = "../example-agent" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"