[package]
name = "kernel-guest"
version = "0.1.0"
edition = "2021"
description = "Kernel guest execution logic with agent_main entrypoint"
license = "Apache-2.0"

[dependencies]
kernel-core = { path = "../kernel-core", default-features = false }
kernel-sdk = { path = "../kernel-sdk" }
constraints = { path = "../constraints" }
example-agent = { path = "../example-agent", optional = true }

[features]
default = ["example-agent"]
risc0 = []
example-agent = ["dep:example-agent"]