[package]
name = "kernel-guest"
version = "0.1.0"
edition = "2021"
description = "Kernel guest execution logic with agent_main entrypoint"
license = "Apache-2.0"

[dependencies]
kernel-core = { path = "../kernel-core", default-features = false }
kernel-sdk = { path = "../kernel-sdk" }
constraints = { path = "../constraints" }
example-agent = { path = "../example-agent", optional = true }

# RISC Zero zkVM guest runtime (only needed when building for zkVM)
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"], optional = true }

[features]
default = ["example-agent"]
risc0 = ["dep:risc0-zkvm"]
example-agent = ["dep:example-agent"]