# RISC Zero Guest Wrapper for kernel-guest
#
# This is a minimal wrapper crate that allows risc0-build to compile
# kernel-guest as a zkVM guest program. It provides the main() entry point
# that delegates to the kernel-guest library.

[package]
name = "zkvm-guest"
version = "0.1.0"
edition = "2021"

# Required for risc0-build to recognize this as a standalone guest
[workspace]

[dependencies]
# The actual kernel-guest library with all its dependencies
# IMPORTANT: Change the feature to match the agent you want to use:
# - default-features = true -> uses example-agent
# - features = ["example-yield-agent"] -> uses yield agent for Phase 3 E2E
kernel-guest = { path = "../../kernel-guest", default-features = false, features = ["example-yield-agent"] }

# RISC Zero zkVM guest runtime
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }

[features]
default = []

[profile.release]
debug = 1
lto = true
